spostamento fatto, inizio revisione completa

--- a/Thesis_Menchini_v2/main.tex
+++ b/Thesis_Menchini_v2/main.tex
@@ -88,18 +88,18 @@
 
 
 
-\selectlanguage{english} % or italian, as you prefer
+\selectlanguage{english} 
 
 \tableofcontents
 
 \include{chapters/ch1_introduction}
 \include{chapters/ch2_background}
 \include{chapters/ch3_related_work}
-\include{chapters/ch4_system_overview}
+\include{chapters/ch4_training_and_models}
 \include{chapters/ch5_perception_pipeline}
-\include{chapters/ch6_simulation_environment}
-\include{chapters/ch7_real_environment}
-\include{chapters/ch8_training_and_models}
+\include{chapters/ch6_system_overview}
+\include{chapters/ch7_simulation_environment}
+\include{chapters/ch8_real_environment}
 \include{chapters/ch9_results}
 \include{chapters/ch10_sim2real}
 \include{chapters/ch11_future_works}
